--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -13,66 +15,71 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
+        buildConfigField 'String', 'API_KEY', '"19a9dd1bac1531e973f331568febe579"'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
         vectorDrawables {
             useSupportLibrary true
         }
-    }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        buildTypes {
+            release {
+                minifyEnabled false
+                proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            }
         }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-    buildFeatures {
-        compose true
-    }
-    composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
-    }
-    packagingOptions {
-        resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_17
+            targetCompatibility JavaVersion.VERSION_17
         }
-    }
-}
+        kotlinOptions {
+            jvmTarget = '17'
+        }
+        buildFeatures {
+            compose true
+            buildConfig true
+        }
 
-dependencies {
-    constraints {
-        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
-            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
-        }
-        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
-            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
+        composeOptions {
+            kotlinCompilerExtensionVersion = "1.4.6"
         }
     }
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
-    implementation platform('androidx.compose:compose-bom:2022.10.00')
-    implementation 'androidx.compose.ui:ui'
-    implementation 'androidx.compose.ui:ui-graphics'
-    implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest'
-    def nav_version = "2.6.0"
-    implementation "androidx.navigation:navigation-compose:$nav_version"
-    implementation "androidx.navigation:navigation-compose:2.4.0-alpha10"
+    dependencies {
+        implementation "androidx.activity:activity-compose:1.4.0"
+        implementation "androidx.compose.ui:ui:1.1.0"
+        implementation "androidx.compose.material3:material3:1.1.0"
+        implementation "androidx.compose.ui:ui-tooling:1.1.0"
+        implementation "androidx.compose.runtime:runtime:1.1.0"
+        implementation "androidx.compose.foundation:foundation:1.1.0"
+        implementation "androidx.compose.ui:ui-test-junit4:1.1.0"
+        implementation "androidx.navigation:navigation-compose:2.4.0-alpha07"
+        implementation 'androidx.core:core-ktx:1.8.0'
+        implementation 'androidx.appcompat:appcompat:1.4.1'
+        implementation 'com.google.android.material:material:1.5.0'
+        implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+        testImplementation 'junit:junit:4.13.2'
+        androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+        androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+        implementation "androidx.navigation:navigation-compose:2.6.0"
+        implementation "androidx.navigation:navigation-compose:2.4.0-alpha10"
+        implementation("androidx.lifecycle:lifecycle-runtime-compose:2.6.1")
+        implementation("androidx.compose.runtime:runtime-livedata:1.4.3")
+        implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
+        implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+        implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+        implementation "io.coil-kt:coil-compose:2.2.2"
+        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
+        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
+        implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+        implementation "com.google.dagger:hilt-android:2.44"
+        kapt "com.google.dagger:hilt-compiler:2.44"
+        implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+        implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
+        implementation 'androidx.compose.runtime:runtime-livedata:1.4.3'
 
+
+
+    }
 }
